# bboids

./: Cargo.toml  README.md
src/: boids.rs  hash_grid.rs  main.rs  ui.rs
