[package]
name = "bboids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
rand = "0.8.5"
rayon = "1.8.1"

#Changing the opt-level will change the algorithm in some ways, more visible change occurs on the matching factor
#[profile.dev]
#opt-level = 3

[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_egui]
opt-level = 3

[profile.dev.package.rand]
opt-level = 3

[profile.dev.package.rayon]
opt-level = 3
